--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "clsx": "^2.1.0",
+    "formik": "^2.4.5",
     "modern-normalize": "^2.0.0",
+    "nanoid": "^5.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
